Sun Oct  8 12:00:28 BST 2006 (njh)
----------------------------------
  * libclamav/js.[ch]:	Created place holders for the frontend to NGS

Sat Oct  7 17:13:40 CEST 2006 (tk)
----------------------------------
  * shared/cdiff.c: add support for UNLINK command

Sat Oct  7 12:47:32 CEST 2006 (tk)
----------------------------------
  * libclamav: make the experimental anti-phishing code more thread safe,
	       patch from Edvin Torok <edwintorok*gmail.com>

Thu Oct  5 22:46:19 CEST 2006 (tk)
----------------------------------
  * libclamav/sis.c: fix handling of compressed multiple language files (bb#42)

Fri Sep 29 21:29:33 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	More fix compilation error when --experimental is not
				given

Fri Sep 29 17:54:03 CEST 2006 (tk)
----------------------------------
  * libclamav/unzip.c: allow dir->fd to be 0 (bb#40)

Fri Sep 29 17:38:31 CEST 2006 (tk)
----------------------------------
  * libclamav/readdb.c: fix error path double free, patch from Sven

Thu Sep 28 08:32:45 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix compilation error when --experimental is not
				given

Wed Sep 27 22:30:41 BST 2006 (njh)
----------------------------------
  * clamav-milter:	--report would cause phishes to pass through tagged

Wed Sep 27 20:24:26 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	CL_EXPERIMENTAL: No longer uses curl, or falls back to
				external programs when curl isn't installed

Wed Sep 27 20:15:20 BST 2006 (njh)
----------------------------------
  * libclamav/regex_list.c:	Fix segfault on Solaris when running --debug

Wed Sep 27 17:37:42 BST 2006 (njh)
----------------------------------
  * clamav-milter:	--report sometimes failed

Wed Sep 27 17:29:24 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	 CL_EXPERIMENTAL now compiles under VS2005

Wed Sep 27 15:26:45 BST 2006 (njh)
----------------------------------