@@ -1,3 +1,7 @@
+Sun Oct  8 13:57:33 BST 2006 (njh)
+----------------------------------
+  * libclamav/js.c:	Finished first draft of the extraction phase
+
 Sun Oct  8 12:00:28 BST 2006 (njh)
 ----------------------------------
   * libclamav/js.[ch]:	Created place holders for the frontend to NGS
